--- a/src/style/Navbar.css
+++ b/src/style/Navbar.css
@@ -65,15 +65,17 @@
 }
 
 .sidebar::-webkit-scrollbar-track {
-  background-color: #fff;
+  /* background-color: #fff; */
+  background-color: #8b5cf6;
 }
 
 .sidebar::-webkit-scrollbar-thumb {
   /* background: #8b5cf6; */
-  background: rgb(171, 171, 171);
+  background: rgb(255, 255, 255);
   border: 3px solid transparent;
   border-radius: 9px;
   background-clip: content-box;
+  height: 2rem;
 }
 .sidebar-content {
   border-bottom: 1px solid rgb(2, 27, 43);
